# src_platform_pwcheckd

./: AUTHORS  CHANGELOG  Makefile.in  README.md  configure  configure.in
man/: Makefile.in  pwcheckd.pod
src/: Makefile.in  checker.c  protos.h  pwcheck_x11  pwcheckd.c  tester.c
test/: Makefile  checker.c  request.c  timeout.c
